# pds-core

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  migration_plan.md  pyproject.toml  run_tests.ps1
docs/: active_scan_contract.md  class_metadata_contract.md  cli_menu_parity.md  module_profiles_and_dispatch.md  module_qualified_workspace.md  module_standards_integration.md  pds2_module_integration.md  pds2_payload_contract.md  qr_payload_and_routing_contract.md  roster_workspace_contract.md  routing_identity_models.md  scan_failure_resolution_metadata.md  standards_contract.md  standards_management_workflow.md  starter_standards.md  workspace_management.md
pds_core/: __init__.py  _scan_metadata_utils.py  assignments.py  class_metadata.py  classes.py  cli.py  core_menu.py  identifiers.py  local_open.py  menu_navigation.py  module_dispatch.py  module_profiles.py  omr1.py  pds1.py  pds2.py  qr_payload.py  rosters.py  route_ids.py  route_registrations.py  routes.py  routing_models.py  scan_failure_metadata.py  scan_resolution_metadata.py  scan_retention.py  scan_routes.py  school_years.py  standards.py  standards_selection.py  starter_standards.py  workspace.py
tests/: test_assignments.py  test_class_metadata.py  test_classes.py  test_cli.py  test_cli_menu.py  test_core_menu.py  test_identifiers.py  test_local_open.py  test_menu_navigation.py  test_module_dispatch.py  test_module_profiles.py  test_omr1.py  test_package.py  test_pds1.py  test_pds2.py  test_qr_payload.py  test_release_metadata.py  test_roster_mutation.py  test_rosters.py  test_route_ids.py  (+25 more)
(+44 files in other folders)
