[project]
name = "pds-core"
version = "0.1.0"
description = "Shared core utilities for Paper Data Suite modules."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Stephen Severino" }
]
dependencies = []

[project.scripts]
pds-core = "pds_core.cli:main"
core = "pds_core.core_menu:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true

[tool.setuptools.package-data]
pds_core = ["starter_data/standards/*.json"]
